tests/sumo/spec/departure/errors/speed_given50_ignore/errors.sumo
Warning: Departure speed for vehicle '1' is too high for the departure edge 'beg'.
